Fixed padding on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -115,7 +115,15 @@ button:focus {
 /*==========================
         3.HELPER
 ============================*/
-
+.responsive-iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+}
 .section {
     padding-top: 80px;
     padding-bottom: 80px;
